Subiendo Jueves Cambios

--- a/PosVentas.Api/appsettings.json
+++ b/PosVentas.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "POSConnection": "Data Source=MSI\\SQLEXPRESS;Database=POS;Integrated Security=true;"
+    "POSConnection": "Data Source=MSI\\SQLEXPRESS;Database=POS;Trusted_Connection=True;MultiplesActiveResultSets=true;"
   }
 }
