--- a/PosVentas.Api/appsettings.Development.json
+++ b/PosVentas.Api/appsettings.Development.json
@@ -1,13 +1,12 @@
 {
-  {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "POSConnection": "Data Source=MSI\\SQLEXPRESS;Database=POS;Integrated Security=true;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "POSConnection": "Data Source=MSI\\SQLEXPRESS;Database=POS;Trusted_Connection=True;MultiplesActiveResultSets=true;"
   }
+}
